fix for right padding/margin issue on mobile clients

--- a/app/assets/stylesheets/resources/layout.scss
+++ b/app/assets/stylesheets/resources/layout.scss
@@ -51,3 +51,9 @@
 .shift-padding-right-strong {
   padding-right: 55px;
 }
+
+body {
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100%;
+}
